force-app/main/default/objects/TH_UnifiedAPI_Landing__c/TH_UnifiedAPI_Landing__c.object-meta.xml
<CustomObject>
    <label>TH UnifiedAPI Landing</label>
    <nameField>
        <label>TH UnifiedAPI Landing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TH UnifiedAPI Landings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>