force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/addr_building__c.field-meta.xml
<CustomField>
    <fullName>addr_building__c</fullName>
    <label>Address Building</label>
    <length>255</length>
    <type>Text</type>
</CustomField>