force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/addr_district__c.field-meta.xml
<CustomField>
    <fullName>addr_district__c</fullName>
    <label>Address District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>