force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/addr_lane__c.field-meta.xml
<CustomField>
    <fullName>addr_lane__c</fullName>
    <label>Address Lane</label>
    <length>255</length>
    <type>Text</type>
</CustomField>