force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/addr_province__c.field-meta.xml
<CustomField>
    <fullName>addr_province__c</fullName>
    <label>Address Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>