force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/addr_region__c.field-meta.xml
<CustomField>
    <fullName>addr_region__c</fullName>
    <label>Address Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>