force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/addr_road__c.field-meta.xml
<CustomField>
    <fullName>addr_road__c</fullName>
    <label>Address Road</label>
    <length>255</length>
    <type>Text</type>
</CustomField>