force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/addr_subdistrict__c.field-meta.xml
<CustomField>
    <fullName>addr_subdistrict__c</fullName>
    <label>Address SubDistrict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>