force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/addr_village_name__c.field-meta.xml
<CustomField>
    <fullName>addr_village_name__c</fullName>
    <label>Address Village Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>