force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/addr_village_no__c.field-meta.xml
<CustomField>
    <fullName>addr_village_no__c</fullName>
    <label>Address Village No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>