force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/br_brand_name__c.field-meta.xml
<CustomField>
    <fullName>br_brand_name__c</fullName>
    <label>BR Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>