force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/br_currbrand_rating__c.field-meta.xml
<CustomField>
    <fullName>br_currbrand_rating__c</fullName>
    <label>BR Current Brand Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>