force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/br_is_own_use__c.field-meta.xml
<CustomField>
    <fullName>br_is_own_use__c</fullName>
    <label>BR Is Own Use</label>
    <length>100</length>
    <type>Text</type>
</CustomField>