force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/br_mainbrandid__c.field-meta.xml
<CustomField>
    <fullName>br_mainbrandid__c</fullName>
    <label>BR Brand ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>