force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/br_relation_status__c.field-meta.xml
<CustomField>
    <fullName>br_relation_status__c</fullName>
    <label>BR Relation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>