force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/br_relation_type__c.field-meta.xml
<CustomField>
    <fullName>br_relation_type__c</fullName>
    <label>BR Relation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>