force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/Contact_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Contact_Ethnicity__c</fullName>
    <label>Contact Ethnicity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>