force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/contact_homephone__c.field-meta.xml
<CustomField>
    <fullName>contact_homephone__c</fullName>
    <label>Contact HomePhone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>