force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/contact_mobilephone__c.field-meta.xml
<CustomField>
    <fullName>contact_mobilephone__c</fullName>
    <label>Contact Mobile Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>