force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/contact_national_id__c.field-meta.xml
<CustomField>
    <fullName>contact_national_id__c</fullName>
    <label>Contact National ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>