force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/contact_otherphone__c.field-meta.xml
<CustomField>
    <fullName>contact_otherphone__c</fullName>
    <label>Contact Other Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>