force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/contact_preferred_contact__c.field-meta.xml
<CustomField>
    <fullName>contact_preferred_contact__c</fullName>
    <label>Contact Preferred Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>