force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/contact_preferredlanguage__c.field-meta.xml
<CustomField>
    <fullName>contact_preferredlanguage__c</fullName>
    <label>Contact Preferred Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>