force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/contact_third_party_opt_out_date__c.field-meta.xml
<CustomField>
    <fullName>contact_third_party_opt_out_date__c</fullName>
    <label>Contact Third Party Opt Out Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>