force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/contact_whatsapp_optout_date__c.field-meta.xml
<CustomField>
    <fullName>contact_whatsapp_optout_date__c</fullName>
    <label>Contact Whatsapp Opt Out Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>