force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/cr_buyingfor__c.field-meta.xml
<CustomField>
    <fullName>cr_buyingfor__c</fullName>
    <label>CR Buying For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>