force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/cr_channelid__c.field-meta.xml
<CustomField>
    <fullName>cr_channelid__c</fullName>
    <label>CR Channel ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>