force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/cr_consent__c.field-meta.xml
<CustomField>
    <fullName>cr_consent__c</fullName>
    <label>CR Consent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>