force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/cr_delivery_address__c.field-meta.xml
<CustomField>
    <fullName>cr_delivery_address__c</fullName>
    <label>CR Delivery Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>