force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/cr_hcp_classification__c.field-meta.xml
<CustomField>
    <fullName>cr_hcp_classification__c</fullName>
    <label>CR HCP Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>