force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/cr_leadtype__c.field-meta.xml
<CustomField>
    <fullName>cr_leadtype__c</fullName>
    <label>CR Lead Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>