force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/cr_promoter_code__c.field-meta.xml
<CustomField>
    <fullName>cr_promoter_code__c</fullName>
    <label>CR Promoter Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>