force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/cr_salutation__c.field-meta.xml
<CustomField>
    <fullName>cr_salutation__c</fullName>
    <label>CR Salutation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>