force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/cr_sample_product_name__c.field-meta.xml
<CustomField>
    <fullName>cr_sample_product_name__c</fullName>
    <label>CR Sample Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>