force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/error_handle_1__c.field-meta.xml
<CustomField>
    <fullName>error_handle_1__c</fullName>
    <label>Error Handle 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>