force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/error_message__c.field-meta.xml
<CustomField>
    <fullName>error_message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>