force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/fatigue_signs__c.field-meta.xml
<CustomField>
    <fullName>fatigue_signs__c</fullName>
    <label>Fatigue Signs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>