force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/nh_chair_test_score__c.field-meta.xml
<CustomField>
    <fullName>nh_chair_test_score__c</fullName>
    <label>NH Chair Test Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>