force-app/main/default/objects/TH_UnifiedAPI_Landing__c/fields/nh_strengthscore__c.field-meta.xml
<CustomField>
    <fullName>nh_strengthscore__c</fullName>
    <label>NH Strength Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>